--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "aws-amplify": "^1.1.10",
     "axios": "^0.18.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.3.12"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -56,6 +57,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "material-design-icons-iconfont": "^4.0.3",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
